[gd_scene load_steps=15 format=3 uid="uid://bqcn0vo0ait26"]

[ext_resource type="Texture2D" uid="uid://ckm5f14just72" path="res://Art/16x16 Pixel Art Roguelike (Forest) Pack/characters/armor_02.png" id="1_3fotm"]
[ext_resource type="Script" path="res://Characters/npcs/mercenary/RichardTheGigachadWizard.gd" id="2_aqu0x"]
[ext_resource type="Script" path="res://interact_area.gd" id="3_orqtc"]
[ext_resource type="Theme" uid="uid://d0qfeecooxxpf" path="res://SmallFontTheme.tres" id="4_y3cxq"]
[ext_resource type="Texture2D" uid="uid://bda8a38gqhymr" path="res://Art/16x16 Pixel Art Roguelike (Forest) Pack/ui/small_coin.tres" id="5_ac16s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nshvf"]
atlas = ExtResource("1_3fotm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc73c"]
atlas = ExtResource("1_3fotm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dr5l8"]
atlas = ExtResource("1_3fotm")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m87i"]
atlas = ExtResource("1_3fotm")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkich"]
atlas = ExtResource("1_3fotm")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_82i77"]
atlas = ExtResource("1_3fotm")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_76c8i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nshvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc73c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dr5l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m87i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkich")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82i77")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_s6m50"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jeo08"]
radius = 3.16228

[node name="RichardTheGigachadWizard" type="StaticBody2D"]
collision_mask = 0
script = ExtResource("2_aqu0x")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_76c8i")
autoplay = "default"
frame_progress = 0.814168
offset = Vector2(0, -5)

[node name="InteractArea" type="Area2D" parent="."]
script = ExtResource("3_orqtc")
path_to_sprite = NodePath("../AnimatedSprite")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource("CircleShape2D_s6m50")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jeo08")

[node name="CostHBox" type="HBoxContainer" parent="."]
offset_left = -8.0
offset_top = -25.0
offset_right = 7.0
offset_bottom = -9.0
theme = ExtResource("4_y3cxq")
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="CostHBox"]
layout_mode = 2
texture = ExtResource("5_ac16s")
stretch_mode = 3

[node name="Label" type="Label" parent="CostHBox"]
layout_mode = 2
text = "10"
